--- a/edit.html
+++ b/edit.html
@@ -42,12 +42,12 @@
     <table class="table table-stripped table-hover table-warning">
         <thead>
             <th>userid</th>
-            <th>Name</th>
-            <th>Gender</th>
-            <th>Email</th>
+            <th>Name<button class="btn" onclick="sortdata()" type="button">SORT</button></th>
+            <th>Gender<button class="btn" onclick="sortdata1()" type="button">SORT</button></th>
+            <th>Email<button class="btn" onclick="sortdata2()" type="button">SORT</button></th>
             <th>Password</th>
             <th>Phone</th>
-            <th>Date</th>
+            <th>Date<button class="btn" onclick="sortdata3()" type="button">SORT</button></th>
             <th>Checkbox</th>
             <th>Btn(del)</th>
             <th>Btn(edit)</th>
